[DS] Descriptive Statistic for Analyzed Accidents by Month of the Year and Crash Date

--- a/descriptive statistics.ipynb
+++ b/descriptive statistics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "id": "5b824e28-0b59-43d8-8409-fcf5f8048b44",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,6 @@
        "      <th>Min Injuries Total</th>\n",
        "      <th>Max Injuries Total</th>\n",
        "      <th>Average Injuries Total</th>\n",
-       "      <th>Most Weather Condition</th>\n",
-       "      <th>Most Traffic Way Type</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -44,8 +42,6 @@
        "      <td>0.0</td>\n",
        "      <td>12.0</td>\n",
        "      <td>0.45</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NOT DIVIDED</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -54,8 +50,6 @@
        "      <td>0.0</td>\n",
        "      <td>16.0</td>\n",
        "      <td>0.40</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NOT DIVIDED</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -64,8 +58,6 @@
        "      <td>0.0</td>\n",
        "      <td>21.0</td>\n",
        "      <td>0.38</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NOT DIVIDED</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -74,8 +66,6 @@
        "      <td>0.0</td>\n",
        "      <td>21.0</td>\n",
        "      <td>0.38</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NOT DIVIDED</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -84,8 +74,6 @@
        "      <td>0.0</td>\n",
        "      <td>13.0</td>\n",
        "      <td>0.36</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NOT DIVIDED</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -94,8 +82,6 @@
        "      <td>0.0</td>\n",
        "      <td>11.0</td>\n",
        "      <td>0.36</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NOT DIVIDED</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -104,8 +90,6 @@
        "      <td>0.0</td>\n",
        "      <td>19.0</td>\n",
        "      <td>0.36</td>\n",
-       "      <td>CLEAR</td>\n",
-       "      <td>NOT DIVIDED</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -121,17 +105,17 @@
        "4    Tuesday           30074                 0.0                11.0   \n",
        "6     Friday           34458                 0.0                19.0   \n",
        "\n",
-       "   Average Injuries Total Most Weather Condition Most Traffic Way Type  \n",
-       "1                    0.45                  CLEAR           NOT DIVIDED  \n",
-       "0                    0.40                  CLEAR           NOT DIVIDED  \n",
-       "3                    0.38                  CLEAR           NOT DIVIDED  \n",
-       "5                    0.38                  CLEAR           NOT DIVIDED  \n",
-       "2                    0.36                  CLEAR           NOT DIVIDED  \n",
-       "4                    0.36                  CLEAR           NOT DIVIDED  \n",
-       "6                    0.36                  CLEAR           NOT DIVIDED  "
+       "   Average Injuries Total  \n",
+       "1                    0.45  \n",
+       "0                    0.40  \n",
+       "3                    0.38  \n",
+       "5                    0.38  \n",
+       "2                    0.36  \n",
+       "4                    0.36  \n",
+       "6                    0.36  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,9 +144,6 @@
     "    min_injury = day_data['injuries_total'].min()  \n",
     "    max_injury = day_data['injuries_total'].max()  \n",
     "    avg_injury = day_data['injuries_total'].mean()  \n",
-    "\n",
-    "    weather_condition = day_data['weather_condition'].mode()[0]  \n",
-    "    trafficway_type = day_data['trafficway_type'].mode()[0]  \n",
     "    \n",
     "    # Append result dictionary for each crash day\n",
     "    results.append({\n",
@@ -171,8 +152,187 @@
     "        'Min Injuries Total': min_injury,\n",
     "        'Max Injuries Total': max_injury,\n",
     "        'Average Injuries Total': round(avg_injury, 2),\n",
-    "        'Most Weather Condition': weather_condition,\n",
-    "        'Most Traffic Way Type': trafficway_type\n",
+    "    })\n",
+    "\n",
+    "# Sort\n",
+    "res_df = pd.DataFrame(results)\n",
+    "res_df = res_df.sort_values(by='Average Injuries Total', ascending=False)\n",
+    "res_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "5059e062-7fb5-4ccd-9920-4bace9685160",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Crash Month</th>\n",
+       "      <th>Total Accident</th>\n",
+       "      <th>Max Injuries Total</th>\n",
+       "      <th>Average Injuries Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>July</td>\n",
+       "      <td>17834</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>August</td>\n",
+       "      <td>18350</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>September</td>\n",
+       "      <td>19018</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>June</td>\n",
+       "      <td>17851</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>May</td>\n",
+       "      <td>17432</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>October</td>\n",
+       "      <td>20089</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>April</td>\n",
+       "      <td>15096</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.38</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>November</td>\n",
+       "      <td>18328</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>December</td>\n",
+       "      <td>18816</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>March</td>\n",
+       "      <td>15265</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>0.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>January</td>\n",
+       "      <td>16606</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>0.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>February</td>\n",
+       "      <td>14621</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.32</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Crash Month  Total Accident  Max Injuries Total  Average Injuries Total\n",
+       "0         July           17834                12.0                    0.43\n",
+       "1       August           18350                15.0                    0.41\n",
+       "3    September           19018                11.0                    0.41\n",
+       "4         June           17851                 9.0                    0.41\n",
+       "11         May           17432                16.0                    0.40\n",
+       "8      October           20089                21.0                    0.39\n",
+       "9        April           15096                15.0                    0.38\n",
+       "5     November           18328                17.0                    0.37\n",
+       "2     December           18816                21.0                    0.36\n",
+       "7        March           15265                12.0                    0.36\n",
+       "10     January           16606                 9.0                    0.34\n",
+       "6     February           14621                19.0                    0.32"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statistics\n",
+    "import numpy as np\n",
+    "\n",
+    "# Declaration\n",
+    "# Descriptive Statistic for Analyzed Accidents by Month of the Year and Crash Date\n",
+    "data = pd.read_csv(\"traffic_accidents.csv\")\n",
+    "\n",
+    "# Convert Crash Month\n",
+    "data['crash_date'] = pd.to_datetime(data['crash_date'], format='%m/%d/%Y %I:%M:%S %p')\n",
+    "data['Crash Month'] = data['crash_date'].dt.month_name()\n",
+    "\n",
+    "# Unique values for Crash Month\n",
+    "crash_days = data['Crash Month'].unique().tolist()\n",
+    "\n",
+    "results = []\n",
+    "for month in crash_days:\n",
+    "    day_data = data[data['Crash Month'] == month]\n",
+    "    \n",
+    "    total_accident = day_data['injuries_total'].count() \n",
+    "    max_injury = day_data['injuries_total'].max()  \n",
+    "    avg_injury = day_data['injuries_total'].mean()  \n",
+    "    \n",
+    "    # Append result dictionary for each crash month\n",
+    "    results.append({\n",
+    "        'Crash Month': month,\n",
+    "        'Total Accident': total_accident,\n",
+    "        'Max Injuries Total': max_injury,\n",
+    "        'Average Injuries Total': round(avg_injury, 2)\n",
     "    })\n",
     "\n",
     "# Sort\n",
@@ -184,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5059e062-7fb5-4ccd-9920-4bace9685160",
+   "id": "577fd395-4039-4102-a40c-2c6fc4933e62",
    "metadata": {},
    "outputs": [],
    "source": []
