[DS] Descriptive Statistic for Analyzed Accidents by Year

--- a/descriptive statistics.ipynb
+++ b/descriptive statistics.ipynb
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "5059e062-7fb5-4ccd-9920-4bace9685160",
    "metadata": {},
    "outputs": [
@@ -298,7 +298,7 @@
        "6     February           14621                19.0                    0.32"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +309,7 @@
     "import numpy as np\n",
     "\n",
     "# Declaration\n",
-    "# Descriptive Statistic for Analyzed Accidents by Month of the Year and Crash Date\n",
+    "# Descriptive Statistic for Analyzed Accidents by Month\n",
     "data = pd.read_csv(\"traffic_accidents.csv\")\n",
     "\n",
     "# Convert Crash Month\n",
@@ -343,8 +343,189 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "577fd395-4039-4102-a40c-2c6fc4933e62",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Crash Year</th>\n",
+       "      <th>Total Accident</th>\n",
+       "      <th>Max Injuries Total</th>\n",
+       "      <th>Average Injuries Total</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2013</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2015</td>\n",
+       "      <td>1917</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>7615</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2017</td>\n",
+       "      <td>17655</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018</td>\n",
+       "      <td>27438</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>27959</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>22784</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2021</td>\n",
+       "      <td>25689</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022</td>\n",
+       "      <td>25543</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023</td>\n",
+       "      <td>25454</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.41</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2024</td>\n",
+       "      <td>26214</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>0.44</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2025</td>\n",
+       "      <td>1036</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.40</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Crash Year  Total Accident  Max Injuries Total  Average Injuries Total\n",
+       "10        2013               2                 2.0                    1.50\n",
+       "7         2015            1917                 5.0                    0.15\n",
+       "4         2016            7615                13.0                    0.18\n",
+       "8         2017           17655                11.0                    0.33\n",
+       "3         2018           27438                21.0                    0.37\n",
+       "6         2019           27959                16.0                    0.36\n",
+       "5         2020           22784                19.0                    0.41\n",
+       "1         2021           25689                21.0                    0.40\n",
+       "2         2022           25543                17.0                    0.40\n",
+       "0         2023           25454                11.0                    0.41\n",
+       "9         2024           26214                15.0                    0.44\n",
+       "11        2025            1036                 7.0                    0.40"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import statistics\n",
+    "import numpy as np\n",
+    "\n",
+    "# Declaration\n",
+    "# Descriptive Statistic for Analyzed Accidents by Year\n",
+    "data = pd.read_csv(\"traffic_accidents.csv\")\n",
+    "\n",
+    "# Convert Crash Year\n",
+    "data['crash_date'] = pd.to_datetime(data['crash_date'], format='%m/%d/%Y %I:%M:%S %p')\n",
+    "data['Crash Year'] = data['crash_date'].dt.year\n",
+    "\n",
+    "# Unique values for Crash Year\n",
+    "crash_days = data['Crash Year'].unique().tolist()\n",
+    "\n",
+    "results = []\n",
+    "for year in crash_days:\n",
+    "    day_data = data[data['Crash Year'] == year]\n",
+    "    \n",
+    "    total_accident = day_data['injuries_total'].count() \n",
+    "    max_injury = day_data['injuries_total'].max()  \n",
+    "    avg_injury = day_data['injuries_total'].mean()  \n",
+    "    \n",
+    "    # Append result dictionary for each crash month\n",
+    "    results.append({\n",
+    "        'Crash Year': year,\n",
+    "        'Total Accident': total_accident,\n",
+    "        'Max Injuries Total': max_injury,\n",
+    "        'Average Injuries Total': round(avg_injury, 2)\n",
+    "    })\n",
+    "\n",
+    "# Sort\n",
+    "res_df = pd.DataFrame(results)\n",
+    "res_df = res_df.sort_values(by='Crash Year', ascending=True)\n",
+    "res_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79f1d1ae-1337-4872-9f6e-7b55f726ae89",
    "metadata": {},
    "outputs": [],
    "source": []
